# python-sdk

./: .flake8  .gitignore  CHANGELOG.md  MAKEFILE  Makefile  README.md  index.html  pyproject.toml  requirements-lint.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/: pull_request_template.md
.github/workflows/: docs.yml  main.yml
corva/: __init__.py  api.py  application.py  configuration.py  constants.py  event.py  exceptions.py  logger.py  settings.py  stream.py  testing.py  types.py  utils.py
corva-sdk/: index.html
corva-sdk/1.10.0/: index.html
corva-sdk/1.11.0/: index.html
corva-sdk/1.11.2/: index.html
corva-sdk/1.11.3/: index.html
corva-sdk/1.11.4/: index.html
corva-sdk/1.12.0/: index.html
corva-sdk/1.13.1/: index.html
corva-sdk/1.14.0/: index.html
corva-sdk/1.14.1/: index.html
corva-sdk/1.14.2/: index.html
corva-sdk/1.15.0/: index.html
corva-sdk/1.5.1/: index.html
corva-sdk/1.5.2/: index.html
corva-sdk/1.5.3/: index.html
corva-sdk/1.6.0/: index.html
corva-sdk/1.7.0/: index.html
corva-sdk/1.8.0/: index.html
corva-sdk/1.8.1/: index.html
corva-sdk/1.9.0/: index.html
corva-sdk/1.9.1/: index.html
corva-sdk/1.9.2/: index.html
corva-sdk/2.0.0/: index.html
corva-sdk/2.0.2/: index.html
corva-sdk/2.0.3/: index.html
corva-sdk/2.1.0/: index.html
corva-sdk/2.1.1/: index.html
corva-sdk/v1.11.1/: index.html
corva/app/: base.py  context.py  scheduled.py  stream.py  task.py
corva/event/: base.py  event.py  scheduled.py  stream.py  task.py
corva/loader/: base.py  scheduled.py  stream.py  task.py
corva/middleware/: init_api.py  init_state.py  load_and_store_state.py  loader.py  scheduled.py  splitter.py  stream.py  stream_filter.py  unpack_context.py  user.py  user_callable.py  wrapper.py
corva/models/: base.py  context.py  scheduled.py  stream.py  task.py
corva/network/: api.py
corva/runners/: scheduled.py  stream.py
corva/state/: base.py  custom_redis.py  redis.py  redis_adapter.py  redis_state.py
corva_plugin/: plugin.py
data/tests/: scheduled_event.json  stream_event.json  task_event.json
docs/: antora-playbook.yml  antora.yml  index.adoc  index.html
docs_src/: tutorial_1_hello_world.py  tutorial_2_configuration.py
pytest_plugin/: plugin.py
site/: index.html
src/: plugin.py  version.py
src/app_types/: tutorial002.py  tutorial003.py
src/corva/: __init__.py  api.py  api_adapter.py  api_utils.py  application.py  cache_adapter.py  configuration.py  handlers.py  logger.py  shared.py  testing.py  utils.py  validate_app_init.py
src/testing/: tutorial003.py  tutorial004.py
tests/: conftest.py  test_api.py  test_api_key.py  test_context.py  test_event.py  test_logging.py  test_plugin.py  test_redis.py  test_scheduled_app.py  test_service.py  test_stream_app.py  test_task_app.py  test_test_client.py  test_utils.py
worker/: constants.py  exceptions.py  logger.py  settings.py
(+184 files in other folders)
